--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_rust_bridge: ^1.45.0
   meta: ^1.8.0
   shelf_proxy: ^1.0.4
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
