--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,3 +96,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+  assets:
+  - assets/computer-vision.png
